feat: Implemented getSpeakers endpoint
